# tahriri

./: .env.example  README.md  conda.yaml  pyproject.toml  tahriri.py
tahriri/: tahriri.py
templates/: index.html
tests/: test_tahriri.py
